tests/fixtures/valid/tuple/tuple_empty.py
# Empty tuple using tuple() builtin
t: tuple[int] = tuple()
print(len(t))
# Expected: 0
