tests/fixtures/invalid/set_with_args.py
# Test set() builtin with arguments
# Should fail: set() takes no arguments

s: set[int] = set(1)
